--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -10,6 +10,7 @@ http {
     sendfile    on;
     tcp_nopush  on;
     tcp_nodelay on;
+    include       mime.types;
 
     upstream docker-sks-db {
         server sks-db:11371;
@@ -20,6 +21,10 @@ http {
 
         server_name gpg.mozilla.org;
         server_name keyserver.mozilla.org;
+
+        if ($http_x_forwarded_proto = 'http') {
+            return 301 https://$server_name$request_uri;
+        }
 
         root /dev/null;
 
