--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -26,6 +26,8 @@ http {
             return 301 https://$server_name$request_uri;
         }
 
+        rewrite ^/contribute.json$ /contribute.txt redirect;
+
         root /dev/null;
 
         add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload";
