turn off port redirect in rewrite

--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -18,6 +18,7 @@ http {
 
     server {
         listen 8080;
+        port_in_redirect off;
 
         server_name gpg.mozilla.org;
         server_name keyserver.mozilla.org;
