disable https redirect until gpg knows how to handle it

--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -23,9 +23,10 @@ http {
         server_name gpg.mozilla.org;
         server_name keyserver.mozilla.org;
 
-        if ($http_x_forwarded_proto = 'http') {
-            return 301 https://$server_name$request_uri;
-        }
+# gpg does not like 301 codes and forcing hkp to hpks, so disabling this for now
+#        if ($http_x_forwarded_proto = 'http') {
+#            return 301 https://$server_name$request_uri;
+#        }
 
         rewrite ^/contribute.json$ /contribute.txt redirect;
 
