--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -11,6 +11,10 @@ http {
     tcp_nopush  on;
     tcp_nodelay on;
     include       mime.types;
+    client_body_temp_path /tmp 1 2;
+    client_body_buffer_size 256k;
+    client_max_body_size 8m;
+
 
     upstream docker-sks-db {
         server sks-db:11371;
