--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -53,6 +53,8 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
             proxy_ignore_client_abort on;
             client_max_body_size 8m;
+            client_body_temp_path /tmp 1 2;
+            client_body_buffer_size 256k;
 
             add_header         X-Robots-Tag 'noindex, nofollow' always;
         }
