--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -17,6 +17,10 @@ RUN yum clean -y all && \
 ADD etc/nginx.conf /etc/nginx/nginx.conf
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
         && ln -sf /dev/stderr /var/log/nginx/error.log
+# allow transversing the tmp dir
+RUN chmod -R a+r /var/lib/nginx/tmp && \
+    chown -R nginx:nobody /var/lib/nginx/tmp && \
+    chmod -R g+rwx /var/lib/nginx/tmp
 EXPOSE 80
 STOPSIGNAL SIGTERM
 CMD ["nginx", "-g", "daemon off;"]
