last permission fix, promises

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -18,10 +18,10 @@ ADD etc/nginx.conf /etc/nginx/nginx.conf
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
         && ln -sf /dev/stderr /var/log/nginx/error.log
 # allow transversing the tmp dir
-RUN chmod -R a+r /var/lib/nginx/tmp && \
+RUN chmod a+rx /var/lib/nginx/tmp && \
+    chmod a+rx /var/lib/nginx && \
     chown -R nginx:nobody /var/lib/nginx/tmp && \
-    chmod -R g+rwx /var/lib/nginx/tmp && \
-    chmod a+r /var/lib/nginx
+    chmod -R g+rwx /var/lib/nginx/tmp
 EXPOSE 80
 STOPSIGNAL SIGTERM
 CMD ["nginx", "-g", "daemon off;"]
